--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.0.0",
-    "axios": "^0.21",
+    "axios": "^0.21.1",
     "bootstrap": "^4.0.0",
     "jquery": "^3.2",
     "laravel-mix": "^6.0.6",
@@ -27,6 +27,7 @@
   "dependencies": {
     "latest": "^0.2.0",
     "n": "^7.1.0",
+    "reactstrap": "^8.9.0",
     "stable": "^0.1.8"
   }
 }
